crates/specforge-cli/src/snapshots/specforge__formatter__tests__snapshot_error_diagnostic.snap
---
source: crates/specforge-cli/src/formatter.rs
expression: "render(&[diag], &sources)"
---
[E001] Error: unresolved reference `nonexistent_inv`
   ╭─[test.spec:1:1]
   │
 1 │ invariant data_integrity "Test" {
   │ 
   │ Help: did you mean `data_integrity`?
───╯
1 error
