crates/specforge-cli/src/snapshots/specforge__formatter__tests__snapshot_error_with_label.snap
---
source: crates/specforge-cli/src/formatter.rs
expression: "render(&[diag], &sources)"
---
[E002] Error: duplicate entity name `UserProfile`
   ╭─[types.spec:3:6]
   │
 1 │ type UserProfile "User Profile" {
   │      ─────┬─────  
   │           ╰─────── first defined here
   │ 
 3 │ type UserProfile "Duplicate" {
───╯
1 error
