crates/specforge-cli/src/snapshots/specforge__formatter__tests__snapshot_info_diagnostic.snap
---
source: crates/specforge-cli/src/formatter.rs
expression: "render(&[diag], &sources)"
---
[I003] Advice: newer format available
   ╭─[test.spec:1:1]
   │
 1 │ invariant data_integrity "Test" {
───╯
1 info
