crates/specforge-cli/src/snapshots/specforge__formatter__tests__snapshot_multiple_mixed.snap
---
source: crates/specforge-cli/src/formatter.rs
expression: "render(&diags, &sources)"
---
[E001] Error: error one
   ╭─[test.spec:1:1]
   │
 1 │ invariant data_integrity "Test" {
───╯
[W001] Warning: warning one
   ╭─[test.spec:2:3]
   │
 2 │   guarantee """must hold"""
───╯
[I003] Advice: info one
   ╭─[test.spec:1:1]
   │
 1 │ invariant data_integrity "Test" {
───╯
1 error, 1 warning, 1 info
