crates/specforge-cli/src/snapshots/specforge__formatter__tests__snapshot_warning_diagnostic.snap
---
source: crates/specforge-cli/src/formatter.rs
expression: "render(&[diag], &sources)"
---
[W001] Warning: orphan behavior
   ╭─[test.spec:1:1]
   │
 1 │ invariant data_integrity "Test" {
───╯
1 warning
